--- a/admin/productlist.html
+++ b/admin/productlist.html
@@ -42,7 +42,7 @@
                     <th>Nhà sản xuất</th>
                     <th>Bảo hành</th>
                     <th>VAT</th>
-                    <th>Tên biến thể</th>
+                    <th>Phiên bản</th>
                     <th>Giá</th>
                 </tr>
             </thead>
